# production-rag

./: .gitignore  README.md  REVIEW.md  SUBMISSION.md  eval_data.json  pyproject.toml  quickstart.sh  serve_frontend.py  test_system.py
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: search.py
backend/app/core/: chunking.py  extractors.py
backend/app/rag/: ingestion.py  retrieval.py
frontend/: index.html  script.js  styles.css
scripts/: evaluate.py  test_ingestion.py  test_retrieval.py
test_data/: financial_report.txt  quarterly_data.csv
